# researchify

./: .gitignore  README.md  app.py  main.py  requirements.txt
static/: pyproject.toml  style.css  webscraping.py
templates/: index.html  saved.html
