[project]
name = "researchify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bs4>=0.0.2",
    "charset-normalizer>=3.4.4",
    "diffusers>=0.35.2",
    "flask>=3.1.2",
    "markupsafe>=3.0.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "transformers>=4.57.3",
]
